# dining_philosphers_problem

./: .editorconfig  .gitignore  Makefile  README.md  README.txt  common.c  common.h  dining_philosophers.c  fork.c  fork.h  main.c  makefile  meson.build  philosopher.c  philosopher.h  phsp  phsp.c
inc/: statistics.h
src/: fork.c  main.c  meson.build  philosopher.c  phsp.c  statistics.c
